# stm32-usart

./: .gitmodules  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile  Makefile.common  README.md  STM32F103C8T6.ld
cmake/: arm_none_eabi_cortex_m3.cmake  flash.cmake  freertos.cmake  libopencm3.cmake  version.h.in
inc/: FreeRTOSConfig.h
src/: main.c
